# gamepad2car

./: .gitignore  .gitmodules  README.md  README_TRIGGERS.md  control_car.py  file  file2  fileZiziCaca  find_gamepad_mappings.py  gamepad2car.py  gamepad_config.py  gamepad_control.py  gamepad_gui.py  hybrid_control.py  keyboard_control.py  launch.sh  requirements.txt  robocar_base.py  test_audio_devices.py  test_joystick.py  test_pygame.py  test_sound.py  test_triggers.py  test_vesc.py
CPP/: .gitignore  CMakeLists.txt  Controller.cpp  Controller.hpp  Python.cpp  Python.hpp  build.sh  controllerList.cpp  fix_pyvesc.sh  gamecar2pad  joystickHandle.cpp  joystickTestControl.cpp  joystick_control  main.cpp  rebuild_and_test.sh  run_real_vesc.sh  run_sim_vesc.sh  setters.py.move  setup_vesc_environment.sh  test_cpp_vesc.sh  test_motor_servo.py  test_python_paths.py  test_real_vesc.sh  test_servo_debug.py  test_vesc_simple.py  vescLib.py  vesc_wrapper.py
scripts/: test_servomoteur.py
tests_scripts/: test_joystick.py
